# lps22hb-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/BLEsense_USB/: Cargo.toml
examples/BLEsense_USB/src/: main.rs
examples/BLEsense_blink/: Cargo.toml
examples/BLEsense_blink/src/: main.rs
examples/arduino_BLEsense/: Cargo.toml
examples/arduino_BLEsense/src/: main.rs
examples/stm32l0_i2c/src/: main.rs
examples/stm32l0_spi/: Cargo.toml
examples/stm32l0_spi/src/: main.rs
src/: config.rs  fifo.rs  interrupt.rs  lib.rs  pressure.rs  register.rs  sensor.rs
src/interface/: i2c.rs  mod.rs  spi.rs
