[package]
name = "lps22hb"
version = "0.1.0"
authors = ["Michal Lasak <nebelgrau77@gmail.com>"]
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with LPS22HB pressure sensor module."
documentation = "https://docs.rs/lps22hb"
readme = "README.md"
keywords = ["embedded-hal-driver", "pressure", "sensor", "MEMS", "lps22"]
license = "MIT"
repository = "https://github.com/nebelgrau77/lps22hb-rs"

[dependencies]
embedded-hal  = { version = "0.2" }
